# farmer-game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.win  README.md  granjero.dev  granjero_private.h  granjero_private.rc  granjero_private.res  main.cpp
Reto DEBUG/: Makefile.win  Project1.dev  Project1.layout  Project1_private.rc  Project1_private.res  main.cpp  resource.h  resource.rc
Reto RELEASE/recursos/: granjero_en_barco_plantilla.psd
cmake/: download.cmake
scripts/: build.sh  configure.sh
src/: main.cpp
